gtk+2.0 (2.16.2-1) unstable; urgency=low

  [ Loic Minier ]
  * Fix string concat in dh_gtkmodules; thanks Kanru Chen; closes: #528782.

  [ Sebastian Dröge ]
  * New upstream bugfix release:
    + debian/patches/091_workaround_no_gtk_init_incorrect_display.patch:
      - Dropped, merged upstream.
    + debian/patches/070_mandatory-relibtoolize.patch:
      - Regenerated for the new version.
  * debian/control.in:
    + Updated Standards-Version to 3.8.1, no additional changes needed.

 -- Sebastian Dröge <slomo@debian.org>  Tue, 02 Jun 2009 07:44:43 +0200

gtk+2.0 (2.16.1-2) unstable; urgency=low

  [ Loic Minier ]
  * Fix test-print-backend configure flag addition.
  * Set opt_configure_flags to $(shared_configure_flags) in the sample opt
    flavor for armel and move the opt flavor and check flavors below the
    definition of other flags.

 -- Josselin Mouette <joss@debian.org>  Thu, 16 Apr 2009 18:08:02 +0200

gtk+2.0 (2.16.1-1) experimental; urgency=low

  [ Loic Minier ]
  * Clarify dh_gtkmodules doc slightly.

  [ Gustavo Noronha Silva ]
  * debian/series:
  - forgot to add 022_disable-viqr-im-for-vi-locale.patch and
    061_use_pdf_as_default_printing_standard.patch to the series file
    (thanks to seb128 for noticing)
  * debian/control.in:
  - sync Replaces with ubuntu's package for easier migration from Ubuntu
    to Debian ;)

  [ Josselin Mouette ]
  * Make update-icon-caches always generate the cache, now that dh_icons
    is widespread.

  [ Sebastian Dröge ]
  * debian/libgtk-directfb-2.0-0.symbols,
    debian/libgtk2.0-0.symbols,
    debian/libgail18.symbols,
    debian/rules:
    + Add symbol files for GTK.

  [ Loic Minier ]
  * Merge the following changes by Emmet Hikory:

  [ Emmet Hikory ]
  * Port optimised flavor work by Loic Minier from pango1.0:
    - Rework flavor-specific vars.
      + Introduce $(flavor) which is set to $* to clarify implicit rules
      + Rename common_configure_flags to configure_flags